# OpenGL_Engine_530

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
asset/block/: block_1.json
asset/image/: erro.aseprite
asset/model/a1/: ht.gltf
asset/model/a2121/: ht.blend1  ht.gltf
asset/model/cj11/: cj1.gltf  cj2.gltf
asset/model/psx_temple_island/: license.txt  scene.gltf
ku3f/: glad.cpp
ku3f/include/glad/: glad.h
ku3f/lib/: assimp-vc145-mtd.lib
src/: main.cpp
src/Utils/: init_dll.h  top_window.h
src/Utils/ImGUI/: imgui_demo.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_main.cpp  imgui_widgets.cpp
src/core/: GLmain.cpp  GLmain.h
src/core/Controller/: ControllerBase.h  ControllerManager.cpp  ControllerManager.h  InputManager.cpp  InputManager.h  input_types.h
src/core/Controller/Callback/: GLFWCallbackManager.cpp  GLFWCallbackManager.h  GLFWcallback.cpp  GLFWcallback.h
src/core/Controller/controller/: CameraController.cpp  CameraController.h
src/core/GL/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  initGL.h
src/core/GL/Buffers/: ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/core/GL/Texture/: AtlasMipmap.cpp  AtlasMipmap.h  Texture.cpp  Texture.h  TextureAtlas.cpp  TextureAtlas.h  TextureCubemap.cpp  TextureCubemap.h  Texture_base.cpp  Texture_base.h  imageTexture.cpp  imageTexture.h
src/core/time/: FPSLimiter.cpp  FPSLimiter.h  setFPS.cpp  setFPS.h  timer.cpp  timer.h
src/game/block/: block_best.h  load_blockData.cpp  load_blockData.h  register_block.cpp  register_block.h
src/game/core/: Chunk.cpp  Chunk.h  PerlinNoise.h  World.cpp  World.h
src/game/core/mesh/: c_mesh.cpp  (+1 more)
src/game/mash/: chunkMash.cpp  chunkMash.h
src/shader/: FragmentShader.glsl  VertexShader.glsl
src/shader/2Dshader/: FragmentShader.glsl  VertexShader.glsl  a1.frag.glsl
src/shader/Line/: F_lineShader.glsl  V_lineShader.glsl
src/shader/chunk/: FragmentShader.glsl  VertexShader.glsl
src/shader/normal/: FragmentShader.glsl  GeometryShader.glsl  VertexShader.glsl
src/shader/wboit/: wboit_Revealage.frag.glsl  wboit_accum.frag.glsl  wboit_accum.vert.glsl  wboit_composite.frag.glsl  wboit_composite.vert.glsl
src/shader/windouShader/: FragmentShader.glsl
src/test/: fbo_test.cpp  fbo_test.h
src/test/old_t/: mc_test2.cpp  mc_test2.h
src/test/testmenu/: testmenu.cpp  testmenu.h
src/unuse_tools/: look_model.h  read_gpu_data.h
(+13 files in other folders)
